# folio-feed

./: .gitignore  README.md  Taskfile.yaml  pytest.ini  tox.ini
.github/workflows/: build-analyzer.yaml  build-backend.yml  build-fetcher.yaml  build-frontend.yml  helm-gke-deploy.yml  python-tests.yml
applications/UI/: pubspec.yaml
applications/UI/android/app/: build.gradle
applications/UI/android/app/src/main/: AndroidManifest.xml
applications/UI/ios/Runner.xcodeproj/: project.pbxproj
applications/UI/macos/Runner.xcodeproj/: project.pbxproj
applications/UI/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
applications/backend/: Dockerfile  pyproject.toml
applications/backend/django_server/: manage.py
applications/backend/django_server/django_server/: asgi.py  settings.py  urls.py  views.py  wsgi.py
applications/backend/django_server/news/: admin.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
applications/backend/django_server/news/migrations/: 0001_initial.py  0002_ticker_news_sentiment.py  0003_alter_ticker_ticker_alter_news_unique_together.py  0004_alter_news_img_src_url_alter_news_src_url.py  0005_analysis.py  0006_analysis_neutral_news.py  0007_alter_news_img_src_url_alter_news_sentiment_and_more.py  0008_news_need_attention_news_reason_alter_news_sentiment.py
applications/backend/django_server/news/templates/: base.html  display.html  home.html  input.html  news.html  tickers.html
applications/data_analyzer/: Dockerfile  analyzer.py  pyproject.toml  update_analysis.sql
applications/data_analyzer/tests/: analyzer_test.py
applications/data_analyzer/utils/: models.py
applications/data_fetcher/: Dockerfile  fetcher.py  pyproject.toml
applications/data_fetcher/tests/: test_fetcher.py
applications/data_fetcher/utils/: logging.py  models.py
applications/frontend/: .dockerignore  Dockerfile  app.vue  nginx.conf  nuxt.config.ts  package-lock.json  package.json  vite.config.js
deploy/helm/: README.md
deploy/helm/folio-feed/: Chart.yaml  values.yaml
deploy/helm/folio-feed/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
deploy/helm/folio-feed/templates/tests/: test-connection.yaml
deploy/k8s/: README.md
deploy/k8s/folio-feed-helm/: Chart.yaml
deploy/terraform/: .terraform.lock.hcl  variables.tf
infrastructure/k8s/folio-feed-helm/: Chart.yaml  values.yaml
infrastructure/k8s/folio-feed-helm/templates/: analyzer-cron.yaml  analyzer-deployment.yaml  analyzer-service-account.yaml  backend-deployment.yaml  backend-hpa.yaml  backend-monitoring.yaml  backend-service-account.yaml  backend-service.yaml  fetcher-cron.yaml  frontend-deployment.yaml  frontend-hpa.yaml  frontend-service-account.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml
infrastructure/k8s/other-resources/: gmp-operator-config.yaml
infrastructure/terraform/: README.md  artifact-registry.tf  gke_cluster.tf  iam.tf  service-account.tf  variables.tf  versions.tf
