[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["gowtham1729 <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
daphne = "^4.0.0"
whitenoise = "^6.6.0"
psycopg = "^3.1.12"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.10.1"
mypy = "^1.6.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
