[tool.poetry]
name = "data-fetcher"
version = "0.1.0"
description = ""
authors = ["gowtham1729 <abc@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.12"}
pika = "^1.3.2"
fire = "^0.5.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
